--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <!-- MENU -->
     <div class="menu-container">
         <ol>
-            <a href=""><img src="img/logo.png" class="menu-image"></a>
+            <a href="./"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
-                    <a href="about" class="menu-top-item">Western</a>
+                    <a href="./about" class="menu-top-item">Western</a>
                     <div class="menu-dropdown" id="western-dropdown">
                         <div class="dropdown-item"><a href="about">About Us</a></div>
                         <div class="dropdown-item"><a href="about#culture">Culture</a></div>
@@ -33,7 +33,7 @@
                     </div>
                 </li>
                 <li id="menu-join">
-                    <a href="join" class="menu-top-item">Join Us</a>
+                    <a href="./join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
                         <div class="dropdown-item"><a href="clubs">Clubs</a></div>
                         <div class="dropdown-item"><a href="">Conferences</a></div>
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li id="menu-council">
-                    <a href="team" class="menu-top-item">Council</a>
+                    <a href="./team" class="menu-top-item">Council</a>
                     <div class="menu-dropdown" id="council-dropdown">
                         <div class="dropdown-item"><a href="team">Operations</a></div>
                         <div class="dropdown-item"><a href="team">Our Team</a></div>
