--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
     <hr class="line-break">
 
     <!-- CONTACT US -->
-    <div class="title contact-us-title">Contact Us</div>
+    <div class="title contact-us-title" id="contact">Contact Us</div>
     <div class="contact-us">
 
         <!-- GOOGLE MAP -->
@@ -352,7 +352,7 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        <a href="/" class="footer-image">
+        <a href="./" class="footer-image">
             <img src="./img/logo_white.png" height="30px">
             <span style="margin-left:10px;">Western UES</span>
         </a>
