--- a/clubs.html
+++ b/clubs.html
@@ -160,7 +160,7 @@
 
     <!-- CLUBS -->
     <div class="clubs-container">
-        <div class="title clubs-title">Western Engineering Clubs</div>
+        <div class="title clubs-title">Engineering Clubs</div>
         <!-- CLUBS CARDS -->
 
         <div class="club-card">
@@ -776,7 +776,7 @@
         </div>
 
         <div class="club-card">
-            <div class="club-photo" style="background-image: url(./img/club/hyperloop.jpg);">
+            <div class="club-photo" style="background-image: url(./img/club/hyperloop3.png);">
                 <div class="club-name-wrapper">
                     <div class="club-name">WE Trillium Hyperloop</div>
                 </div>
@@ -787,15 +787,13 @@
                     <div class="club-content">
                         <div class="club-content-x" id="club-close"></div>
                         <div class="club-content-text">
-                            <img class="club-content-photo" src="./img/club/hyperloop.jpg">
-                            <div class="club-content-name">WE Trillium Hyperloop</div>
+                            <img class="club-content-photo" src="./img/club/hyperloop2.png">
+                            <div class="club-content-name">WE Trillium Hyperloop</div><br>
                             <div class="club-content-description">
-                                Western’s first ever Hyperloop design team geared towards making the concept of
-                                Hyperloop, introduced by Elon Musk, a reality. We are a team of 40 students comprised of
-                                various engineering disciplines, designing and building a functional pod prototype which
-                                we will be using to compete at the annual SpaceX Hyperloop Pod Competition held in
-                                Hawthorne, California. We hope to put Western on the map and raise awareness of the
-                                sustainable and efficient innovation that Hyperloop is.
+                                Trillium Hyperloop is a team of students from Western University focused on innovating,
+                                designing, and building a Hyperloop pod to compete at the SpaceX competition in 2022. WE
+                                Trillium Hyperloop was founded in 2020 by Western Students who are passionate about
+                                sustainable public transit and innovation.
                             </div>
                             <div class="club-content-socials">
                                 <div class="club-content-socials-text">Join Us!</div>
@@ -805,6 +803,8 @@
                                                 class="club-content-socials-icon" src="./img/ig.png"></a>
                                         <a href="https://www.facebook.com/we.hyped"><img
                                                 class="club-content-socials-icon" src="./img/fb.png"></a>
+                                        <a href="https://www.linkedin.com/company/trillium-hyperloop/"><img
+                                                class="club-content-socials-icon" src="./img/in.png"></a>
                                     </div>
 
                                 </div>
