--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
                 <li id="menu-about">
                     <a href="./about" class="menu-top-item">Western</a>
                     <div class="menu-dropdown" id="western-dropdown">
-                        <div class="dropdown-item"><a href="about">About Us</a></div>
-                        <div class="dropdown-item"><a href="about#culture">Culture</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="about#contact">Contact Us</a></div>
+                        <div class="dropdown-item"><a href="./about">About Us</a></div>
+                        <div class="dropdown-item"><a href="./about#culture">Culture</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./about#contact">Contact Us</a></div>
                     </div>
                 </li>
                 <li id="menu-join">
                     <a href="./join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
-                        <div class="dropdown-item"><a href="clubs">Clubs</a></div>
-                        <div class="dropdown-item"><a href="">Conferences</a></div>
-                        <div class="dropdown-item"><a href="">Events</a></div>
-                        <div class="dropdown-item"><a href="wellness">Wellness Committee</a></div>
-                        <div class="dropdown-item"><a href="environment">Sustainability Committee</a></div>
+                        <div class="dropdown-item"><a href="./clubs">Clubs</a></div>
+                        <div class="dropdown-item"><a href="./join">Conferences</a></div>
+                        <div class="dropdown-item"><a href="./events">Events</a></div>
+                        <div class="dropdown-item"><a href="./wellness">Wellness Committee</a></div>
+                        <div class="dropdown-item"><a href="./environment">Sustainability Committee</a></div>
                         <div class="dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
                 <li id="menu-council">
                     <a href="./team" class="menu-top-item">Council</a>
                     <div class="menu-dropdown" id="council-dropdown">
-                        <div class="dropdown-item"><a href="team">Operations</a></div>
-                        <div class="dropdown-item"><a href="team">Our Team</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
+                        <div class="dropdown-item"><a href="./team">Operations</a></div>
+                        <div class="dropdown-item"><a href="./team">Our Team</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./team#elections">Elections</a></div>
                     </div>
                 </li>
                 <li id="menu-admin">
-                    <a href="admin" class="menu-top-item">Admin</a>
+                    <a href="./admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
-                        <div class="dropdown-item"><a href="team">Council Resources</a></div>
+                        <div class="dropdown-item"><a href="./team">Council Resources</a></div>
                         <div class="dropdown-item"><a href="team">Exec Updates</a></div>
                         <div class="dropdown-item"><a href="">Finances</a></div>
                         <div class="dropdown-item"><a href="">Governing Docs</a></div>
