--- a/join.html
+++ b/join.html
@@ -263,7 +263,7 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        <a href="/" class="footer-image">
+        <a href="./" class="footer-image">
             <img src="./img/logo_white.png" height="30px">
             <span style="margin-left:10px;">Western UES</span>
         </a>
